--- a/dicas.html
+++ b/dicas.html
@@ -6,7 +6,7 @@
   <title>Blog de Gastronomia</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="container">
   <header>
     <h1>Blog de Gastronomia</h1>
     <p>Sabores, histórias e dicas da cozinha para você!</p>
@@ -19,19 +19,39 @@
     <a href="curiosidades.html">Curiosidades</a>
     <a href="contato.html">Contato</a>
   </nav>
-
   <main>
     <h2>Dicas Culinárias</h2>
     <p>Truques e sugestões para deixar seus pratos ainda mais saborosos.</p>
-  
-    <ul>
-      <li>🧂 Use ervas frescas no final do preparo para mais aroma.</li>
-      <li>🔥 Pré-aqueça a frigideira para carnes mais suculentas.</li>
-      <li>🍋 Limão pode realçar sabores sem adicionar sal.</li>
-    </ul>
+    <div class="carousel-wrapper">
+      <div class="carousel-track" id="carousel-track">
+        <div class="carousel-card">
+          <img src="images/ervas.png"><br>
+          <p>🧂 Use ervas frescas no final do preparo para mais aroma.</p>
+        </div>
+        <div class="carousel-card">
+          <img src="images/aqueca.png"><br>
+          <p>🔥 Pré-aqueça a frigideira para carnes mais suculentas.</p>
+        </div>
+        <div class="carousel-card">
+          <img src="images/limao.png"><br>
+          <p>🍋 Limão pode realçar sabores sem adicionar sal.</p>
+        </div>
+      </div>
+      <div class="carousel-controls">
+        <button onclick="scrollCarousel(-1)">&#10094;</button>
+        <button onclick="scrollCarousel(1)">&#10095;</button>
+      </div>
+    </div>
   </main>
   <footer>
     <p>&copy; 2025 Blog de Gastronomia. Todos os direitos reservados.</p>
   </footer>
 </body>
+<script>
+  function scrollCarousel(direction) {
+    const track = document.getElementById('carousel-track');
+    const cardWidth = track.querySelector('.carousel-card').offsetWidth + 20; // +gap
+    track.scrollBy({ left: direction * cardWidth, behavior: 'smooth' });
+  }
+</script>
 </html>
