--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Blog de Gastronomia</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="container">
   <header>
     <h1>Blog de Gastronomia</h1>
     <p>Sabores, histórias e dicas da cozinha para você!</p>
