--- a/receitas.html
+++ b/receitas.html
@@ -6,7 +6,7 @@
   <title>Blog de Gastronomia</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="container">
   <header>
     <h1>Blog de Gastronomia</h1>
     <p>Sabores, histórias e dicas da cozinha para você!</p>
@@ -38,7 +38,7 @@
         </li>
         <li>
           <div class="receitas" data-id="cheesecake">
-            <a href="#"><img src="images/dicas.png" alt="Cheesecake" />
+            <a href="#"><img src="images/cheesecake.png" alt="Cheesecake" />
             <p><strong>Cheesecake de Frutas Vermelhas</strong></p></a>
           </div>
         </li>
